# OCR-chinese-translator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.js
configs/: default_pipeline.json  paddle_finetune_recipe.json
debug_single_roi_out/: results.json
scripts/: bench_speed.py  bridge_single_call.py  build_filter_features.py  debug_single_roi.py  evaluate_adaptive_page.py  evaluate_adaptive_sample.py  evaluate_regions.py  gpu_check_and_fix_ubuntu.sh  gpu_probe_paddle.py  paddle_ocr_bridge.py  smoke_web_api.py
src/ocr_chinese/: __init__.py  cli.py  dataset.py  detect.py  dotenv.py  filter.py  labeling.py  mask.py  metrics.py  pipeline.py  recognize.py  render.py  training.py  translate.py
src/ocr_chinese/web/: __init__.py  app.py  generate_worker.py  schemas.py  service.py
src/ocr_chinese/web/static/: app.js  index.html  styles.css
src/ocr_chinese_masker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
