[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-chinese-masker"
version = "0.1.0"
description = "Mask Chinese text areas in scanned engineering PDFs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "pymupdf>=1.24",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "python-multipart>=0.0.9",
  "openai>=1.0.0",
]

[project.optional-dependencies]
detector = [
  "paddleocr>=2.7.0.3",
]
rapidocr = [
  # RapidOCR doesn't publish wheels for all new Python versions (e.g. 3.14),
  # so keep it optional to avoid breaking installation.
  "rapidocr-onnxruntime>=1.4.4; python_version < '3.13'",
]

[project.scripts]
maskpdf = "ocr_chinese.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
